# YSOS_lvzw

./: .gitignore  README.md
reports/lab0/: example.tex  lab0.tex  lab0.typ
reports/lab0/_minted/: 06A579C098C3C4F842C78E1E523057A5.highlight.minted  26771368C76F23479B712AB0C87541C7.highlight.minted  384096AE8952FC0C30BC46A6ADAC8CD6.highlight.minted  3ABE8D3F7C1B4B4E77B9FF38FE39A743.highlight.minted  496313C6272281AC39F54D2AB3306D27.highlight.minted  4BD0C1C637B12CE68BF634E1F1B961A9.highlight.minted  61CA722B0ABEECA5C824642B10827060.highlight.minted  6F706C2B186803CA9706C3D6E51F6FA7.highlight.minted  7AE62F8C6FF70A41AD56B885C72A60BC.highlight.minted  86D0B355FED9ABCED0F25B63A5896443.highlight.minted  8B1C9EBDF61C9C6F6CCD0204DFC82BF3.highlight.minted  8F2773B483D090521D93077E2C0CE64F.highlight.minted  (+5 more)
src/0x00/: Cargo.toml
src/0x00/crates/bonus-color/: Cargo.toml
src/0x00/crates/bonus-color/src/: main.rs
src/0x00/crates/bonus-shell/: Cargo.toml
src/0x00/crates/bonus-shell/src/: main.rs
src/0x00/crates/bonus-unique-id/: Cargo.toml
src/0x00/crates/bonus-unique-id/src/: main.rs
src/0x00/crates/boot/src/: main.rs
src/0x00/crates/func1/: Cargo.toml
src/0x00/crates/func1/src/: main.rs  utils.rs
src/0x00/crates/func2/: Cargo.toml
src/0x00/crates/func2/src/: main.rs
src/0x00/crates/func3/: Cargo.toml
src/0x00/crates/func3/src/: main.rs
src/0x00/crates/func4/: Cargo.toml
src/0x00/crates/func4/src/: main.rs
src/0x00/crates/func5/: Cargo.toml
src/0x00/crates/func5/src/: main.rs
template/: report.typ  shared.typ
template/functions/: fonts.typ
