[workspace]
members  = ["crates/boot", "crates/func2", "crates/func1", "crates/func3", "crates/func4", "crates/func5", "crates/bonus-color", "crates/bonus-shell"]
resolver = "3"

[profile.release-with-debug]
debug    = true
inherits = "release"

[profile.release-with-debug.package."*"]
debug = false
